# epic-space-shooter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.txt  test.cpp
.github/workflows/: ci.yml
assets/: ATTRIBUTION.md  bullet.png:Zone.Identifier
inc/whereami/: whereami.c  whereami.cpp  whereami.h
src/: main.cpp
src/controllers/: App.cpp  App.hpp  GameController.cpp  GameController.hpp
src/game-objects/: Projectile.cpp  Projectile.hpp
src/game-objects/abstract/: GameObject.cpp  GameObject.hpp
src/game-objects/asteroid/: Asteroid.cpp  Asteroid.hpp
src/game-objects/spaceship/: Asteroid.cpp  Asteroid.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  Spaceship.cpp  Spaceship.hpp
src/interfaces/: Updatable.hpp
src/shaders/: starfield.frag
src/ui/: MainMenu.cpp  MainMenu.hpp  MenuButton.cpp  MenuButton.hpp  PauseOverlay.cpp  PauseOverlay.hpp
src/util/: AssetLoader.cpp  AssetLoader.hpp  FileSystem.cpp  FileSystem.hpp  Math.cpp  Math.hpp  Vector.cpp  Vector.hpp
test/: main.cpp
test/game-objects/spaceship/: Player.test.cpp  Spaceship.test.cpp
test/util/: Vector.test.cpp
tools/: iwyu-tool.py  run-clang-format.py
